--- a/Rechnernetze Dokumentation/Rechnernetze_Dokumentation_Sheraz_Azad_und_Sven_Marquardt.tex
+++ b/Rechnernetze Dokumentation/Rechnernetze_Dokumentation_Sheraz_Azad_und_Sven_Marquardt.tex
@@ -104,13 +104,33 @@ Zweierteam mit dem die Analyse der Spielrealisierung gemacht wurde bestand aus M
   
   Die \textbf{zweite Variante} ist, dass man die Stifte in bestimmten Winkel hinlegt. Hier können wir zum Beispiel sagen das wenn der Stift in einem 90 Grad Winkel liegt, dieser die Bitfolge 001 für Reihe voll darstellt. So können wir die verschiedenen Bitfolgen angeben und bräuchten mit dieser Variante sogar nur einen Stift statt drei.
   
+  Diese Fragestellung bezieht sich auf die Bitübertragungsschicht, da sie für die Übertragung von Informationen (Bits 0 und 1) zuständig ist.
+  
    \subsection[Aufgabe 6 Kommunikation durch Klatschen]{Kommunikation durch Klatschen}
    
    \textbf{Problem}\\
    Dadurch das alle Teams zeitgleich angefangen haben zu klatschen, konnte man nicht unterscheiden ob das Klatschgeräusch vom gegenüber sitzenden Kommunikationspartner kam, oder von einem Kommilitonen aus einer anderen Gruppe. Aufgrund dieser Tatsache sind bei allen Teams Fehler bei der Kommunikation entstanden.
    
    \textbf{Lösung}\\
-   Auch hier gibt es zwei Lösungsansätze, 
+   Auch hier gibt es zwei Lösungsansätze, die sich auf die Medienzugriffskontrollte aufbauen, in der dann nur eine Gruppe zur Zeit kommunizieren darf. Diese Möglichkeiten sind.
+   
+   \textbf{1. Ohne Koordinator:} Jeder Gruppe im Raum wird eine zufällige Wartezeit in Sekunden zugeteilt, die sie abwarten müssen um kommunizieren zu können. Tritt der Fall auf das zwei oder mehrere Gruppen zur selben Zeit kommunizieren wollen, wird eine Wartezeit aus einem größeren Zeitintervall genommen um diesen Fall zu umgehen. Je nach Wichtigkeit könnte man hier den jeweiligen Gruppen eine Wartezeit aus einem kleinen Zeitintervall zu weisen, als dem Rest der Gruppen.
+   
+   \textbf{2. Mit Koordinator:} Bei diesem Lösungansatz gibt es einen Koordinator im Raum, der die Anfragen der Gruppen, die kommunizieren wollen, an sich nimmt und stellt dann eine nach seinen Kriterien faire Reihenfolge fest, in der die Gruppen dann untereinander kommunizieren dürfen. Die Reihenfolge hängt natürlich je nach Wichtigkeit der Gruppen ab und wird vom Koordinator behandelt.
+   
+   Diese Fragestellung bezieht sich auf die Sicherungsschicht, da sie für die zuverlässige Übertragung von Informationen von einem Teilnehmer zum anderen Teilnehmer zuständig ist.
+   
+    \subsection[Aufgabe 7 Kommunikation mit beliebigen Teilnnehmern]{Kommunikation mit beliebigen Teilnnehmern}
+    
+    Wenn man davon ausgeht das jeder Teilnehmer dieselben Kommunikationsregeln hat, vergibt man jedem Teilnehmer eine eindeutige Adresse. Möchte man nun einen anderen Teilnehmer kontaktieren, muss man die zu übermittelende Nachricht adressieren. Die beinhaltenden Informationen der Nachricht bestehen aus Sender, Empfänger und Nachricht. Hierbei muss beachtet werden, das bevor man den Kontakt zu einem Teilnehmer aufnehmen möchte, vor Beginn des Spiels eine Kontaktaufnahme erfolgen muss die vom Empfänger bestätigt wird und erst dann kann das Spiel beginnen.
+    
+    Diese Fragestellung bezieht sich ebenfalls auf die Sicherungsschicht, da sie für die zuverlässige Übertragung von Informationen von einem Teilnehmer zum anderen Teilnehmer zuständig ist.
+    
+    \subsection[Aufgabe 8 Kommunikation mit bestimmten Teilnehmern]{Kommunikation mit bestimmten Teilnehmern}
+    
+    Auch hier bekommt jeder Teilnehmer eine \textbf{eindeutige} Adresse, wobei diese jedoch noch die Informationen Gebäude-, Raum-, Reihen- und Sitznummer beinhalten. Die Nachricht wird somit anhand dieser ausführlichen Informationen an den jeweiligen Teilnehmer gesendet.
+    
+    
   
   
   
